Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Fri Apr 26 20:01:37 BST 2002	Riley Williams <Riley@Williams.Name>

	* Applied `make lint` to include/arch directory.
	* Fixed the bugs found in include/arch/io.h which several other
	  header files import.
	* Discovered that isti() is a reserved name, so changed it to
	  i_sti() throughout the ELKS source tree. Also changed icli()
	  to i_cli() throughout the ELKS source tree for consistency.
	* Fixed all bugs found in include/arch/stat.h with -weak set.
	* Fixed most of the bugs found in include/arch/system.h with the
	  only remaining bug being that the type __ptasks appears never
	  to be defined in the source tree. This is the ONLY remaining
	  bug in this directory as far as `make lint` is concerned.
	* Removed duplicate declaration of get_ss() from header file
	  include/arch/segment.h and added prototypes for declarations.
	* Tweaked machine name for uname such that if CONFIG_286PMODE is
	  defined, we report as a 286 rather than an 8086.

Fri Apr 26 15:21:58 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Cleanups in fork.c and use of register variables.
	* Fixed tcpdev to be opened only by root.
	* Corrected the sys_knlvsn() system call.
	* Cleanups in sched.c

Fri Apr 26 14:28:42 BST 2002	Riley Williams <Riley@Williams.Name>

	* Official thanks to HarKal for finding the bug I introduced
	  during my ANSI'fication of the ELKS source tree.

Fri Apr 26 12:35:31 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Reverted a change Riley made during the ANSI'fication of
	  the memory manager code that made any allocation of memory
	  imposible.