@@ -3,16 +3,23 @@
 
 #include <linuxmt/types.h>
 
+extern int arch_cpu;
+
+void arch_setuptasks(void);
+void setup_arch(void);
+
+/* LINT complains about the following two entries, but I have no idea
+ * what the correct prototype is as __ptaksks doesn't occur elsewhere.
+ * The following definition is very much a stop-gap measure to silence
+ * LINT and is otherwise unused.
+ */
+
 #ifdef __LINT__
 #define __ptasks int
 #endif
 
-void arch_setuptasks(void);
-void load_regs(__ptasks task);
-void save_regs(__ptasks task);
-void setup_arch(void);
-
-extern int arch_cpu;
+void load_regs(__ptasks);
+void save_regs(__ptasks);
 
 #ifdef __LINT__
 #undef __ptasks
